Fixed path in index

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 			<p class='head'><h2>My Portfolio</h2></p>
 		        </div>
 		        <div class="second-line">
-		                 	<p class='under'><a href='D://HTML/index.html'>Home</a></p>
-		                  <p class='under'><a href='D://HTML/about.html'>About</a></p>
-			<p class='under'><a href='D://HTML/qualification.html'>Qualification</a></p>
-			<p class='under'><a href='D://HTML/contact.html'>Contact</a></p>
-			<p class='under'><a href='D://HTML/family.html'>Family</a></p>
-			<p class='under'><a href='D://HTML/friends.html'>Friends</a></p>
-			<p class='under'><a href='D://HTML/achivement.html'>Achivements & Certifications</a></p>
-			<p class='under'><a href='D://HTML/moment.html'>Best Moment of  Life</a></p>
-			<p class='under'><a href='D://HTML/testimonial.html'>Testimonials</a></p>
-			<p class='under'><a href='D://HTML/gallery.html'>Photo Gallery</a></p>
+		                 	<p class='under'><a href='index.html'>Home</a></p>
+		                  <p class='under'><a href='about.html'>About</a></p>
+			<p class='under'><a href='qualification.html'>Qualification</a></p>
+			<p class='under'><a href='contact.html'>Contact</a></p>
+			<p class='under'><a href='family.html'>Family</a></p>
+			<p class='under'><a href='friends.html'>Friends</a></p>
+			<p class='under'><a href='achivement.html'>Achivements & Certifications</a></p>
+			<p class='under'><a href='moment.html'>Best Moment of  Life</a></p>
+			<p class='under'><a href='testimonial.html'>Testimonials</a></p>
+			<p class='under'><a href='gallery.html'>Photo Gallery</a></p>
 		        </div>
 		</div>
 	</header>
@@ -29,13 +29,13 @@
 	<div class='box'>
 		<div class="big">
 		<div class='circle'>
-			<img src='D://HTML/photo.jpeg' width='380px' heigth='180px'>
+			<img src='photo.jpeg' width='380px' heigth='180px'>
 		</div>
 		<div class='social'>
-			<a href=""><img src="D://HTML/insta.jpg" id="insta"></a>
-			<a href=""><img src="D://HTML/what.jpg" id="what"></a>
-			<a href=""><img src="D://HTML/link.jpg" id="link"></a>
-			<a href=""><img src="D://HTML/x.jpg" id="x"></a>
+			<a href=""><img src="insta.jpg" id="insta"></a>
+			<a href=""><img src="what.jpg" id="what"></a>
+			<a href=""><img src="link.jpg" id="link"></a>
+			<a href=""><img src="x.jpg" id="x"></a>
 		</div>
 		</div>
 		<div class='name'>
@@ -61,7 +61,7 @@
 			</div>
 		</div>
 		<div class='next'>
-			<a href='D://HTML/about.html'><button>NEXT</button></a>
+			<a href='about.html'><button>NEXT</button></a>
 		</div>
 	</div>	
 	</main>
