Added insta link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<img src='photo.jpeg' width='380px' heigth='180px'>
 		</div>
 		<div class='social'>
-			<a href=""><img src="insta.jpg" id="insta"></a>
+			<a href="https://instagram.com/vedant_.sonii"><img src="insta.jpg" id="insta"></a>
 			<a href=""><img src="what.jpg" id="what"></a>
 			<a href=""><img src="link.jpg" id="link"></a>
 			<a href=""><img src="x.jpg" id="x"></a>
